# Bungaa_vacancy_parser

./: .gitignore  README.md  credentials.tempalte.json  export_project_folder.py  main.py  pyproject.toml  vacansies.csv  vacansies.json  vacansies.txt  vacansies.xlsx
utils/: CSVSaver.py  JSONSaver.py  Saver.py  TXTSaver.py  Vacancy.py  XLSXSaver.py  __init__.py  exceptions.py
