[tool.poetry]
name = "bungaa-vacancy-parser"
version = "0.1.0"
description = "Vacancy parser from different platforms"
authors = ["BungaaFACE <vladislav0218@gmail.com>"]
readme = "README.md"
packages = [{include = "bungaa_vacancy_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
